--- a/index.html
+++ b/index.html
@@ -2,28 +2,64 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>嘉田株式会社</title>
+  <title>嘉田株式会社 - 中日ビジネス＆医療サポート</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="日本市場進出,医療ツーリズム,不動産売買,中日ビジネス,嘉田株式会社">
+  <meta name="description" content="嘉田株式会社は中国市場進出?日本医療ツーリズム?不動産売買のプロフェッショナル。中日両国に精通したワンストップサービスを提供します。">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <img src="img/logo.png" alt="嘉田株式会社" class="logo">
-    <nav>
+  <header class="hero">
+    <div class="hero-text">
+      <h1 class="ja">中日ビジネス?医療?不動産のプロフェッショナル</h1>
+      <h1 class="zh">中日商务?医疗?地产专业顾问</h1>
       <button onclick="setLang('ja')">日本語</button>
       <button onclick="setLang('zh')">中文</button>
-    </nav>
+    </div>
   </header>
 
-  <section id="home">
-    <h1 class="ja">私たち嘉田株式会社は、会社設立からお客様が日本でのビジネスや生活を円滑に進めるお手伝いをすることです。</h1>
-    <h1 class="zh">嘉田株式会社自成立以来，一直致力于帮助客户在日本顺利开展业务与生活。</h1>
+  <section id="about">
+    <h2 class="ja">私たちについて</h2>
+    <h2 class="zh">关于我们</h2>
+    <p class="ja">私たち嘉田株式会社は、会社設立からお客様が日本でのビジネスや生活を円滑に進めるお手伝いをすることに尽力してまいりました。</p>
+    <p class="zh">嘉田株式会社自成立以来，一直致力于帮助客户在日本顺利开展业务与生活。</p>
+  </section>
+
+  <section id="services">
+    <h2 class="ja">主力サービス</h2>
+    <h2 class="zh">核心服务</h2>
+    <div class="cards">
+      <div class="card">
+        <h3 class="ja">中国市場進出</h3>
+        <h3 class="zh">进军中国市场</h3>
+        <p class="ja">現地視察?市場調査?テレビショッピング実績を活かし、百貨店/スーパー展開まで支援。</p>
+        <p class="zh">利用实地考察、市场调查、电视购物实绩，支持落地百货店/商超。</p>
+      </div>
+      <div class="card">
+        <h3 class="ja">医療ツーリズム</h3>
+        <h3 class="zh">医疗观光</h3>
+        <p class="ja">外国からの患者を日本の高度医療へ案内。医療通訳?付き添いワンストップ。</p>
+        <p class="zh">为海外患者安排日本高端医疗，全程医疗翻译与陪同。</p>
+      </div>
+      <div class="card">
+        <h3 class="ja">不動産売買</h3>
+        <h3 class="zh">不动产买卖</h3>
+        <p class="ja">査定?価格交渉?契約書解説?登記手続きまでプロがサポート。</p>
+        <p class="zh">专业评估、价格谈判、合同说明、登记手续一站式完成。</p>
+      </div>
+    </div>
   </section>
 
   <section id="contact">
-    <p class="ja">お問い合わせ：info@kadenjp.com | 03-1234-5678</p>
-    <p class="zh">联系我们：info@kadenjp.com | 03-1234-5678</p>
+    <h2 class="ja">お問い合わせ</h2>
+    <h2 class="zh">联系我们</h2>
+    <p class="ja">Email: info@kadenjp.com | Tel: 03-1234-5678</p>
+    <p class="zh">邮箱: info@kadenjp.com | 电话: 03-1234-5678</p>
   </section>
+
+  <footer>
+    <small>? 2024 嘉田株式会社 All Rights Reserved.</small>
+  </footer>
 
   <script src="js/lang.js"></script>
 </body>
